feat(html): 設定網頁標題顯示

--- a/src/index.html
+++ b/src/index.html
@@ -1,222 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>一元的個人網站</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>蕭源毅的個人履歷網站</title>
   </head>
+  1
   <body>
-    <!-- 導覽列 -->
-    <header class="site-header">
-      <div class="container header__inner">
-        <a href="#home" class="header__logo">一元的個人網站</a>
-
-        <nav class="nav" id="siteNav">
-          <button class="nav__toggle" id="navToggle" aria-label="切換選單">
-            <span></span><span></span><span></span>
-          </button>
-
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link is-active">首頁</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">關於我</a>
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link">技術</a>
-            </li>
-            <li class="nav__item">
-              <a href="#projects" class="nav__link">作品集</a>
-            </li>
-          </ul>
-        </nav>
-
-        <!-- 下載履歷按鈕 -->
-        <a href="#" class="btn btn--download">下載履歷</a>
-      </div>
-    </header>
-
-    <main>
-      <!-- 首頁 -->
-      <section id="home" class="section section--home">
-        <div class="container home">
-          <div class="home__left">
-            <p class="home__tag">銘傳大學 · 資訊管理學系</p>
-            <h1 class="home__title">
-              嗨，我是 <span>一元</span><br />
-              喜歡把想法做成可以使用的作品。
-            </h1>
-            <p class="home__desc">
-              平常專注在三件事：學習系統 SmartLearn、防詐 LINE Bot，以及 Power
-              BI 資料視覺化。<br />
-              喜歡把複雜的東西變成簡單好理解的畫面與流程。
-            </p>
-
-            <div class="home__actions">
-              <a href="#projects" class="btn btn--primary">看作品集</a>
-              <a href="#about" class="btn btn--ghost">更多關於我</a>
-            </div>
-
-            <ul class="home__meta">
-              <li>🎓 就讀：銘傳大學 資訊管理學系</li>
-              <li>🛠 技能：HTML / CSS / JS / Power BI / LINE Bot</li>
-              <li>🎯 目標：做出真的能幫助人的系統</li>
-            </ul>
-          </div>
-
-          <div class="home__right">
-            <div class="home__photo">
-              <!-- 之後可以換成 <img src="./assets/images/me.jpg" alt="個人照片" /> -->
-              <div class="home__photo-inner">Y</div>
-            </div>
-
-            <div class="home__card">
-              <p class="home__card-title">目前正在做的專題</p>
-              <p class="home__card-text">
-                SmartLearn 學習管理系統、<br />
-                防詐 LINE Bot、<br />
-                中華職棒投手分析儀表板。
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- 關於我 -->
-      <section id="about" class="section section--about">
-        <div class="container about">
-          <h2 class="section__title">關於我</h2>
-
-          <div class="about__grid">
-            <!-- 自我介紹卡片 -->
-            <article class="card about__intro">
-              <h3 class="card__title">自我介紹</h3>
-              <p class="card__text">
-                我是銘傳大學資管系學生，喜歡把課堂上學到的東西做成實際可以使用的系統，
-                比起只寫報告，我更喜歡把想法做成畫面、按鈕與流程。
-              </p>
-              <p class="card__text">
-                做專題時我會先把需求拆清楚，再想畫面與互動，
-                最後才是技術細節。這樣比較不會迷失在程式裡，
-                也比較能跟組員溝通。
-              </p>
-            </article>
-
-            <!-- 教育程度清單 -->
-            <article class="card about__edu">
-              <h3 class="card__title">教育程度</h3>
-              <ul class="about__list">
-                <li>
-                  銘傳大學 資訊管理學系（在學）<br />
-                  系統分析、專案管理、資料視覺化、網路行銷。
-                </li>
-                <li>參與多門雙師課程，實際接觸企業案例與專題。</li>
-                <li>課外自學 Power BI、LINE Messaging API、Git/GitHub。</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- 技術 -->
-      <section id="skills" class="section section--skills">
-        <div class="container">
-          <h2 class="section__title">技術</h2>
-
-          <div class="skills">
-            <div class="skills__item">
-              <p class="skills__name">HTML / CSS 切版</p>
-              <div class="skills__bar">
-                <span style="width: 90%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">JavaScript / DOM 操作</p>
-              <div class="skills__bar">
-                <span style="width: 70%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">Power BI / 資料視覺化</p>
-              <div class="skills__bar">
-                <span style="width: 80%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">LINE Bot / API 串接</p>
-              <div class="skills__bar">
-                <span style="width: 65%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">Git / GitHub 版本控制</p>
-              <div class="skills__bar">
-                <span style="width: 75%"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- 作品集 -->
-      <section id="projects" class="section section--projects">
-        <div class="container">
-          <h2 class="section__title">作品集</h2>
-
-          <div class="projects">
-            <article class="project-card">
-              <h3 class="project-card__title">SmartLearn 學習管理系統</h3>
-              <p class="project-card__text">
-                協助同學管理作業與考試進度的學習平台，結合任務、點數與進度條設計。
-              </p>
-              <a href="#" class="project-card__link">查看作品</a>
-            </article>
-
-            <article class="project-card">
-              <h3 class="project-card__title">防詐 LINE Bot</h3>
-              <p class="project-card__text">
-                整合 NLP、政府開放資料與 165 資料庫，協助判斷訊息是否疑似詐騙。
-              </p>
-              <a href="#" class="project-card__link">查看作品</a>
-            </article>
-
-            <article class="project-card">
-              <h3 class="project-card__title">中華職棒投手分析儀表板</h3>
-              <p class="project-card__text">
-                使用 Power BI 製作投手表現儀表板，分析 ERA、WHIP、K9 等指標。
-              </p>
-              <a href="#" class="project-card__link">查看作品</a>
-            </article>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- 頁尾 -->
-    <footer class="site-footer">
-      <div class="container footer__inner">
-        <p class="footer__text">© 2024 一元 YuanYi. All rights reserved.</p>
-
-        <nav class="footer__nav">
-          <a href="#home" class="footer__link">首頁</a>
-          <a href="#about" class="footer__link">關於我</a>
-          <a href="#skills" class="footer__link">技術</a>
-          <a href="#projects" class="footer__link">作品集</a>
-        </nav>
-
-        <div class="footer__contacts">
-          <span class="footer__icon">📧 </span>
-          <span class="footer__icon">💻 GitHub:</span>
-        </div>
-      </div>
-    </footer>
-
     <script src="./main.js"></script>
   </body>
 </html>
