feat(html): 版面樣式定義

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>蕭源毅的個人履歷網站</title>
+    <link rel="stylesheet" href="style.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
   </head>
-  1
+
   <body>
     <header class="site-header">
       <div class="container header__inner">
@@ -160,7 +165,7 @@
         <div class="container">
           <h2 class="section__title">作品集</h2>
 
-          <div class="projects">1</div>
+          <div class="projects"></div>
         </div>
       </section>
     </main>
