--- a/src/index.html
+++ b/src/index.html
@@ -3,191 +3,185 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>蕭源毅的個人履歷網站</title>
-    <link rel="stylesheet" href="style.min.css" />
+    <title>書籍 A 資訊</title>
+    <link rel="stylesheet" href="book.min.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
   </head>
-
   <body>
-    <header class="site-header">
-      <div class="container header__inner">
-        <a href="#home" class="header__logo">一元的個人網站</a>
-
-        <nav class="nav" id="siteNav">
-          <button class="nav__toggle" id="navToggle" aria-label="切換選單">
-            <span></span><span></span><span></span>
-          </button>
-
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link is-active">首頁</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">關於我</a>
-            </li>
-            <li class="nav__item">
-              <a href="#skills" class="nav__link">技術</a>
-            </li>
-            <li class="nav__item">
-              <a href="#projects" class="nav__link">作品集</a>
-            </li>
-          </ul>
-        </nav>
-
-        <a href="#" class="btn btn--download">下載履歷</a>
-      </div>
-    </header>
-
-    <main>
-      <section id="home" class="section section--home">
-        <div class="container home">
-          <div class="home__left">
-            <p class="home__tag">銘傳大學 · 資訊管理學系</p>
-            <h1 class="home__title">
-              嗨，我是 <span>一元</span><br />
-              喜歡把想法做成可以使用的作品。
-            </h1>
-            <p class="home__desc">
-              平常專注在三件事：學習系統 SmartLearn、防詐 LINE Bot，以及 Power
-              BI 資料視覺化。<br />
-              喜歡把複雜的東西變成簡單好理解的畫面與流程。
-            </p>
-
-            <div class="home__actions">
-              <a href="#projects" class="btn btn--primary">看作品集</a>
-              <a href="#about" class="btn btn--ghost">更多關於我</a>
-            </div>
-
-            <ul class="home__meta">
-              <li>🎓 就讀：銘傳大學 資訊管理學系</li>
-              <li>🛠 技能：HTML / CSS / JS / Power BI / LINE Bot</li>
-              <li>🎯 目標：做出真的能幫助人的系統</li>
-            </ul>
-          </div>
-
-          <div class="home__right">
-            <div class="home__photo">
-              <div class="home__photo-inner">Y</div>
-            </div>
-
-            <div class="home__card">
-              <p class="home__card-title">目前正在做的專題</p>
-              <p class="home__card-text">
-                SmartLearn 學習管理系統、<br />
-                防詐 LINE Bot、<br />
-                中華職棒投手分析儀表板。
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="about" class="section section--about">
-        <div class="container about">
-          <h2 class="section__title">關於我</h2>
-
-          <div class="about__grid">
-            <article class="card about__intro">
-              <h3 class="card__title">自我介紹</h3>
-              <p class="card__text">
-                我是銘傳大學資管系學生，喜歡把課堂上學到的東西做成實際可以使用的系統，
-                比起只寫報告，我更喜歡把想法做成畫面、按鈕與流程。
-              </p>
-              <p class="card__text">
-                做專題時我會先把需求拆清楚，再想畫面與互動，
-                最後才是技術細節。這樣比較不會迷失在程式裡，
-                也比較能跟組員溝通。
-              </p>
-            </article>
-
-            <article class="card about__edu">
-              <h3 class="card__title">教育程度</h3>
-              <ul class="about__list">
-                <li>
-                  銘傳大學 資訊管理學系（在學）<br />
-                  系統分析、專案管理、資料視覺化、網路行銷。
-                </li>
-                <li>參與多門雙師課程，實際接觸企業案例與專題。</li>
-                <li>課外自學 Power BI、LINE Messaging API、Git/GitHub。</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section id="skills" class="section section--skills">
+    <section>
+      <header>
         <div class="container">
-          <h2 class="section__title">技術</h2>
+          <div>
+            <h3>一元的個人網站</h3>
+            <nav>
+              <a href="#home" class="active">首頁</a>
+              <a href="#book">關於我</a>
+              <a href="#contact">技術</a>
+              <a href="#projects">作品集</a>
+            </nav>
+          </div>
+        </div>
+      </header>
 
-          <div class="skills">
-            <div class="skills__item">
-              <p class="skills__name">HTML / CSS 切版</p>
-              <div class="skills__bar">
-                <span style="width: 90%"></span>
+      <main class="wrapper">
+        <div id="home" class="home">
+          <div class="text">
+            <span>蕭源毅</span>
+            <h3>銘傳大學-資訊管理學生</h3>
+            <strong>嗨，我是源毅</strong>
+            <div class="button">
+              <button type="button">購買</button>
+              <button type="button">
+                下載目錄<i class="fa-regular fa-file-pdf"></i>
+              </button>
+            </div>
+            <div class="icons">
+              <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+              <div class="icon"><i class="fa-brands fa-github"></i></div>
+              <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+              <div class="icon"><i class="fa-brands fa-line"></i></div>
+            </div>
+          </div>
+          <div class="image">
+            <img src="./assets/images/mcuim.jpg" alt="" />
+          </div>
+        </div>
+
+        <div id="book" class="page">
+          <div class="title">
+            <h2>關於我</h2>
+            <strong
+              >喜歡把複雜的東西變成簡單好理解的畫面與流程</strong
+            >
+          </div>
+
+          <div class="content">
+            <div class="introduce">
+              <div class="card">
+                <h3>自我介紹</h3>
+                <div>不知道</div>
+                <div>不知道</div>
+                <div>不知道</div>
+                <div>不知道</div>
               </div>
             </div>
-
-            <div class="skills__item">
-              <p class="skills__name">JavaScript / DOM 操作</p>
-              <div class="skills__bar">
-                <span style="width: 70%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">Power BI / 資料視覺化</p>
-              <div class="skills__bar">
-                <span style="width: 80%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">LINE Bot / API 串接</p>
-              <div class="skills__bar">
-                <span style="width: 65%"></span>
-              </div>
-            </div>
-
-            <div class="skills__item">
-              <p class="skills__name">Git / GitHub 版本控制</p>
-              <div class="skills__bar">
-                <span style="width: 75%"></span>
+              <div class="introduce">
+                <div class="card">
+                  <h3>學歷</h3>
+                  <div>銘傳小學</div>
+                  <div>銘傳國中</div>
+                  <div>銘傳高中</div>
+                  <div>銘傳大學</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
 
-      <section id="projects" class="section section--projects">
-        <div class="container">
-          <h2 class="section__title">作品集</h2>
-
-          <div class="projects"></div>
+        <div id="contact" class="page">
+          <div class="title">
+            <h2>技術</h2>
+            <strong
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+              provident!</strong
+            >
+          </div>
+            <div class="content">
+              <div class="skills">
+                <div class="item">
+                  <span class="skill">
+                    <span>Terminal</span>
+                    <span>10%</span>
+                  </span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 10%"></div>
+                  </div>
+                </div>
+                <div class="item">
+                  <span class="skill">
+                    <span>HTML</span>
+                    <span>100%</span>
+                  </span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 100%"></div>
+                  </div>
+                </div>
+                <div class="item">
+                  <span class="skill">
+                    <span>CSS</span>
+                    <span>60%</span>
+                  </span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 60%"></div>
+                  </div>
+                </div>
+                <div class="item">
+                  <span class="skill">
+                    <span>TypeScript</span>
+                    <span>90%</span>
+                  </span>
+                  <div class="progress">
+                    <div class="progress-bar" style="width: 90%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </section>
-    </main>
 
-    <footer class="site-footer">
-      <div class="container footer__inner">
-        <p class="footer__text">© 2024 一元 YuanYi. All rights reserved.</p>
+        <div id="projects" class="page">
+          <div class="title">
+            <h2>作品集</h2>
+            <strong
+              >歷年作品展示</strong
+            >
+          </div>
 
-        <nav class="footer__nav">
-          <a href="#home" class="footer__link">首頁</a>
-          <a href="#about" class="footer__link">關於我</a>
-          <a href="#skills" class="footer__link">技術</a>
-          <a href="#projects" class="footer__link">作品集</a>
+          <div>
+            <div class="image">
+              <img src="./assets/images/zCNXrag2vD.jpg" alt="" />
+            </div>
+            <h4>
+              <a href="./demo.html" target="_blank">作品1</a>
+            </h4>
+          
+            <div class="image">
+              <img src="./assets/images/zCNXrag2vD.jpg" alt="" />
+            </div>
+            <h4>
+              <a href="./demo.html" target="_blank">作品2</a>
+            </h4>
+          
+            <div class="image">
+              <img src="./assets/images/zCNXrag2vD.jpg" alt="" />
+            </div>
+            <h4>
+              <a href="./demo.html" target="_blank">作品3</a>
+            </h4>
+          </div>
+        </div>
+      </main>
+
+      <footer>
+        <h3>圖像 Angular 開發入門 第二版</h3>
+        <nav>
+          <a href="#home" class="active">首頁</a>
+          <a href="#book">關於我</a>
+          <a href="#contact">技術</a>
+          <a href="#projects">作品集</a>
         </nav>
-
-        <div class="footer__contacts">
-          <span class="footer__icon">mcu.yuanyi@example.com</span>
-          <span class="footer__icon">G</span>
+        <div class="icons">
+          <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+          <div class="icon"><i class="fa-brands fa-github"></i></div>
+          <div class="icon"><i class="fa-brands fa-facebook"></i></div>
+          <div class="icon"><i class="fa-brands fa-line"></i></div>
         </div>
-      </div>
-    </footer>
-
+        <div class="copy-right">Copyright &copy; 2025</div>
+      </footer>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
